# AMLgsMenu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zhCN.md  command.cfg  package.mk  powerctl.sh  preview_menu.html  preview_osd.html  root@192.168.27.3
src/: application.cpp  application.h  command_executor.cpp  command_executor.h  command_templates.cpp  command_templates.h  command_transport.h  custom_osd_monitor.cpp  custom_osd_monitor.h  main.cpp  mavlink_receiver.cpp  mavlink_receiver.h  menu_renderer.cpp  menu_renderer.h  menu_state.cpp  menu_state.h  signal_monitor.cpp  signal_monitor.h  ssh_command_client.cpp  ssh_command_client.h  telemetry_worker.cpp  telemetry_worker.h  terminal.cpp  terminal.h  udp_command_client.cpp  udp_command_client.h  video_mode.cpp  video_mode.h
systemd/: amlgsmenu.service
